# chess-gtkmm4

./: CMakeLists.txt  README.md  chess.gresource.xml  chess_resources.c  chess_resources.h  debug_build.sh  mac_build.sh  main.cpp  main2.cpp  ming_build.sh
chess_saves/: 2024-08-19_07-31-23_GMT.chess  2024-08-19_07-32-47_GMT.chess  2024-08-21_09-02-33_GMT.chess  checkmate.chess  close_to_checkmate.chess  diagonal.chess  en_passant.chess  jumbled_board.chess  king_in_check.chess  king_movement.chess  king_movement_black_left.chess  king_movement_black_right.chess  king_movement_left.chess  piece_could_save_king.chess  test.chess  testing_king.chess  testing_queen_movement.chess
enum/: PawnEnpassantRow.h  PieceType.h  Player.h
headers/: BoardSpace.h  ChessMovementUtils.h  Coordinates.h  Game.h  HintMarker.h
headers/BoardSpace/: BoardSpace.h
headers/ChessBoard/: ChessBoardController.h  ChessBoardModel.h  ChessBoardView.h
headers/ChessBoardMediator/: ChessBoardMediator.h
headers/ChessImagesInfo/: ChessImagesInfo.h
headers/ChessMediator/: ChessMediator.h
headers/ChessPieces/: Bishop.h  ChessPiece.h  Empty.h  EmptyPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
headers/ChessWindow/: ChessWindow.h
headers/ChessWindowMediator/: ChessWindowMediator.h
headers/Coordinates/: Coordinates.h
headers/FenModel/: FenModel.h  FenStateInfo.h
headers/Game/: Game.h
headers/HintMarker/: HintMarker.h
headers/MathUtils/: MathUtils.h
headers/Point2D/: Point2D.h
headers/Point2DPair/: Point2DPair.h
headers/Utils/: FileUtils.h  MathUtils.h  StringUtils.h
src/: BoardSpace.cpp  ChessMovementUtils.cpp  Coordinates.cpp  Game.cpp  HintMarker.cpp
src/BoardSpace/: BoardSpace.cpp
src/ChessBoard/: ChessBoardController.cpp  ChessBoardModel.cpp  ChessBoardView.cpp
src/ChessBoardMediator/: ChessBoardMediator.cpp
src/ChessImagesInfo/: ChessImagesInfo.cpp
src/ChessMediator/: ChessMediator.cpp
src/ChessPieces/: Bishop.cpp  ChessPiece.cpp  Empty.cpp  EmptyPiece.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/ChessWindow/: ChessWindow.cpp
src/ChessWindowMediator/: ChessWindowMediator.cpp
src/Coordinates/: Coordinates.cpp
src/FenModel/: FenModel.cpp  FenStateInfo.cpp
src/Game/: Game.cpp
src/HintMarker/: HintMarker.cpp
src/MathUtils/: MathUtils.cpp
src/Point2D/: Point2D.cpp
src/Point2DPair/: Point2DPair.cpp
src/Utils/: FileUtils.cpp  MathUtils.cpp  StringUtils.cpp
tests/: sample_test.cpp  test_chess.h
tests/CheckTests/: check_on_king.cpp
